# sbyte

./: Cargo.toml  README.md  build_arch.py  manpage  sbyterc
src/: console_displayer.rs  console_sbyte.rs  editor.rs  hunk_editor.rs  input_interface.rs  main.rs  sbyte_editor.rs  shell.rs  tests.rs
src/editor/: content.rs  converter.rs  formatter.rs  mod.rs  structured.rs  tests.rs
src/editor/content/: tests.rs
src/hunk_editor/: command_line.rs  commandable.rs  editor.rs  inconsole.rs
src/hunk_editor/commandable/: inputter.rs
src/hunk_editor/commandable/inputter/: function_ref.rs
src/hunk_editor/visual_editor/: viewport.rs
src/input_interface/: inputter.rs  mod.rs  tests.rs
src/input_interface/platform/unix/: mod.rs
src/input_interface/platform/windows/: mod.rs
src/sbyte_editor/: command_interface.rs  command_line.rs  commandable.rs  content.rs  converter.rs  cursor.rs  editor.rs  flag.rs  inconsole.rs  inputter_editor_interface.rs  prefixed_data.rs  structured.rs  tests.rs  visual_editor.rs
src/sbyte_editor/commandable/: inputter.rs
src/sbyte_editor/commandable/inputter/: function_ref.rs
src/sbyte_editor/content/: tests.rs
src/sbyte_editor/editor/: converter.rs
src/testfiles/: 00
