[package]
name = "sbyte"
version = "0.2.31"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "Console-based byte editor"
categories = ["command-line-utilities", "text-editors"]
keywords = ["hex", "byte", "editor"]
repository = "https://github.com/quintinfsmith/sbyte.git"
license = "GPL-3.0"

[dependencies]
wrecked = "^1.0.7"
ctrlc = "3.1.6"
regex = "^1.4.2"


