[package]
name = "sbyte"
version = "0.3.0"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "Console-based byte editor"
categories = ["command-line-utilities", "text-editors"]
keywords = ["hex", "byte", "editor"]
repository = "git://burnsomni.net/sbyte"
homepage = "https://burnsomni.net/software/sbyte/"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
wrecked = { git = "git://burnsomni.net/wrecked" }
ctrlc = "3.1.6"
regex = "^1.4.2"


