[package]
name = "sbyte"
version = "0.3.1"
authors = ["Quintin Smith <smith.quintin@protonmail.com>"]
edition = "2018"
description = "Console-based byte editor"
categories = ["command-line-utilities", "text-editors"]
keywords = ["hex", "byte", "editor"]
repository = "https://burnsomni.net/git/sbyte"
homepage = "https://burnsomni.net/software/sbyte/"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
wrecked = "^1.1.0"
ctrlc = "3.1.6"
regex = "^1.4.2"
dirs = "4.0.0"


[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
	"Win32_System_Console",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Foundation"
]
